--- a/labs/lab3/index.html
+++ b/labs/lab3/index.html
@@ -57,6 +57,21 @@
       </table>
     </div>
   </div>
+  <div>
+    <form id="add-film-form">
+      <input class="form-input-style" type="text" id="film-title" placeholder="Title">
+      <div>
+        <label for="film-fav">Favorite</label>
+        <input class="form-input-style" type="checkbox" id="film-fav">
+      </div>
+      <input class="form-input-style" type="number" id="film-rating" placeholder="Rating">
+      <div>
+        <label for="film-date">Watch date</label>
+        <input class="form-input-style" type="date" id="film-date" placeholder="Date">
+      </div>
+      <input class="form-input-style" type="submit">
+    </form>
+  </div>
   <button id="button-add-film" class="btn btn-primary btn-lg" type="button">+</button>
 </body>
 
