--- a/labs/lab3/index.html
+++ b/labs/lab3/index.html
@@ -15,6 +15,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
+  <div id="main-page-div">
   <div id="topnavbar" class="container-fluid">
     <div class="left-header-panel ">
       <div id="hamburger-menu">
@@ -57,23 +58,24 @@
       </table>
     </div>
   </div>
-  <div>
+</div>
     <form id="add-film-form">
-      <input class="form-input-style" type="text" id="film-title" placeholder="Title">
-      <div>
-        <label for="film-fav">Favorite</label>
-        <input class="form-input-style" type="checkbox" id="film-fav">
-      </div>
-      <input class="form-input-style" type="number" min="0" max="5" id="film-rating" placeholder="Rating">
-      <div>
-        <label for="film-date">Watch date</label>
+        <input class="form-input-style" type="text" id="film-title" placeholder="Title">
+        <div id="favorite-rating-div">
+            <input class="form-input-style" type="number" min="0" max="5" id="film-rating" placeholder="Rating">
+            <div>
+                <label for="film-fav" style="padding-right:0.5em">Favorite</label>
+                <input class="form-input-style" type="checkbox" id="film-fav">
+            </div>
+        </div>
+        <div>
+        <label for="film-date" style="padding-right:1em">Watch date</label>
         <input class="form-input-style" type="date" id="film-date" placeholder="Date">
-      </div>
-      <button class="form-input-style" type="button" id="submit-new-film-button">
+        </div>
+        <button class="btn btn-primary btn-lg" type="button" id="submit-new-film-button">
         Add film
-      </button>
+        </button>
     </form>
-  </div>
   <button id="button-add-film" class="btn btn-primary btn-lg" type="button">+</button>
 </body>
 
